[gd_scene load_steps=11 format=2]

[ext_resource path="res://Missions.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Monster_1/Walk/Armature_flowmon_walk_duplication2_5.png" type="Texture" id=2]
[ext_resource path="res://fonts/xaltrn2U.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Enemy/Monster3_Idle_Lives8/Armature_Spidmon_idle_ver1_lives8_0.png" type="Texture" id=4]
[ext_resource path="res://images/Level 2_final/level_2_final_kristall.png" type="Texture" id=5]
[ext_resource path="res://images/Level 2_final/level_2_final_v√§rav2_empty.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[node name="Missions" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Enemy" type="Node2D" parent="Node2D"]
editor/display_folded = true

[node name="EnemyMission" type="Sprite" parent="Node2D/Enemy"]
position = Vector2( 80, 260 )
scale = Vector2( 0.12533, 0.12533 )
texture = ExtResource( 2 )

[node name="EnemyText" type="Label" parent="Node2D/Enemy"]
margin_left = 120.0
margin_top = 250.0
margin_right = 164.0
margin_bottom = 294.0
custom_fonts/font = SubResource( 1 )

[node name="Boss" type="Node2D" parent="Node2D"]
editor/display_folded = true

[node name="BossMission" type="Sprite" parent="Node2D/Boss"]
position = Vector2( 70, 330 )
scale = Vector2( 0.120956, 0.120956 )
texture = ExtResource( 4 )

[node name="BossText" type="Label" parent="Node2D/Boss"]
margin_left = 120.0
margin_top = 310.0
margin_right = 160.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 2 )

[node name="Crystal" type="Node2D" parent="Node2D"]
editor/display_folded = true

[node name="CrystalMission" type="Sprite" parent="Node2D/Crystal"]
position = Vector2( 80, 390 )
scale = Vector2( 0.260259, 0.260259 )
texture = ExtResource( 5 )

[node name="CrystalText" type="Label" parent="Node2D/Crystal"]
margin_left = 120.0
margin_top = 370.0
margin_right = 160.0
margin_bottom = 414.0
custom_fonts/font = SubResource( 3 )

[node name="Gate" type="Node2D" parent="Node2D"]
editor/display_folded = true

[node name="GateMission" type="Sprite" parent="Node2D/Gate"]
position = Vector2( 80, 460 )
scale = Vector2( 0.153514, 0.153514 )
texture = ExtResource( 6 )

[node name="GateText" type="Label" parent="Node2D/Gate"]
margin_left = 120.0
margin_top = 430.0
margin_right = 160.0
margin_bottom = 474.0
custom_fonts/font = SubResource( 4 )

